// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli test by import should handle JSON output option 1`] = `
"[
  {
    \\"AvailabilityZone\\": \\"us-east-1a\\",
    \\"InstanceType\\": \\"t3.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001600\\",
    \\"Timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1b\\",
    \\"InstanceType\\": \\"t3.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001600\\",
    \\"Timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1c\\",
    \\"InstanceType\\": \\"t3.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001600\\",
    \\"Timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1d\\",
    \\"InstanceType\\": \\"t3.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001600\\",
    \\"Timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1f\\",
    \\"InstanceType\\": \\"t3.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001600\\",
    \\"Timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1a\\",
    \\"InstanceType\\": \\"t3a.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001700\\",
    \\"Timestamp\\": \\"2019-10-15T22:11:29.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1c\\",
    \\"InstanceType\\": \\"t3a.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001700\\",
    \\"Timestamp\\": \\"2019-10-15T22:11:29.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1b\\",
    \\"InstanceType\\": \\"t3a.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001800\\",
    \\"Timestamp\\": \\"2019-10-15T22:11:29.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1d\\",
    \\"InstanceType\\": \\"t3a.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001800\\",
    \\"Timestamp\\": \\"2019-10-15T20:21:10.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  },
  {
    \\"AvailabilityZone\\": \\"us-east-1f\\",
    \\"InstanceType\\": \\"t3a.nano\\",
    \\"ProductDescription\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"SpotPrice\\": \\"0.001800\\",
    \\"Timestamp\\": \\"2019-10-15T22:11:29.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGb\\": 1
  }
]"
`;

exports[`cli test by import should handle instance family option 1`] = `
"╔═══════════╤══════════╤═══════╤══════╤═════════════════════════╤═════════════════╤═════════════════════════╗
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-east-1a      │ US East (N. Virginia)   ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX (Amazon VPC) │ us-east-1a      │ US East (N. Virginia)   ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-east-1b      │ US East (N. Virginia)   ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX (Amazon VPC) │ us-east-1b      │ US East (N. Virginia)   ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-east-1c      │ US East (N. Virginia)   ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX (Amazon VPC) │ us-east-1c      │ US East (N. Virginia)   ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-east-1d      │ US East (N. Virginia)   ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX (Amazon VPC) │ us-east-1d      │ US East (N. Virginia)   ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-west-2a      │ US West (Oregon)        ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-west-2b      │ US West (Oregon)        ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.013000 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-west-2c      │ US West (Oregon)        ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.014800 │ 2vCPU │ 2GiB │ Linux/UNIX              │ eu-west-1a      │ Europe (Ireland)        ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.014800 │ 2vCPU │ 2GiB │ Linux/UNIX              │ eu-west-1b      │ Europe (Ireland)        ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.014800 │ 2vCPU │ 2GiB │ Linux/UNIX              │ eu-west-1c      │ Europe (Ireland)        ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.014800 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-west-1b      │ US West (N. California) ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.014800 │ 2vCPU │ 2GiB │ Linux/UNIX              │ us-west-1c      │ US West (N. California) ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.015800 │ 2vCPU │ 2GiB │ Linux/UNIX              │ ap-northeast-1a │ Asia Pacific (Tokyo)    ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.015800 │ 2vCPU │ 2GiB │ Linux/UNIX (Amazon VPC) │ ap-northeast-1a │ Asia Pacific (Tokyo)    ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.015800 │ 2vCPU │ 2GiB │ Linux/UNIX              │ ap-northeast-1c │ Asia Pacific (Tokyo)    ║
╟───────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼─────────────────────────╢
║ c1.medium │ 0.015800 │ 2vCPU │ 2GiB │ Linux/UNIX (Amazon VPC) │ ap-northeast-1c │ Asia Pacific (Tokyo)    ║
╚═══════════╧══════════╧═══════╧══════╧═════════════════════════╧═════════════════╧═════════════════════════╝
"
`;

exports[`cli test by import should print help 1`] = `
"aws-spot-price

get current AWS spot instance prices

Options:
      --version             Show version number                        [boolean]
      --help                Show help                                  [boolean]
      --ui                  Start with UI mode        [boolean] [default: false]
  -r, --region              AWS regions.
           [array] [choices: \\"us-east-1\\", \\"us-east-2\\", \\"us-west-1\\", \\"us-west-2\\",
    \\"af-south-1\\", \\"ap-east-1\\", \\"ap-northeast-1\\", \\"ap-northeast-2\\", \\"ap-south-1\\",
             \\"ap-southeast-1\\", \\"ap-southeast-2\\", \\"ca-central-1\\", \\"eu-central-1\\",
              \\"eu-north-1\\", \\"eu-south-1\\", \\"eu-west-1\\", \\"eu-west-2\\", \\"eu-west-3\\",
                                                      \\"me-south-1\\", \\"sa-east-1\\"]
  -i, --instanceType        EC2 type
           [array] [choices: \\"a1.medium\\", \\"a1.large\\", \\"a1.xlarge\\", \\"a1.2xlarge\\",
      \\"a1.4xlarge\\", \\"a1.metal\\", \\"t1.micro\\", \\"t2.micro\\", \\"t2.small\\", \\"t2.medium\\",
       \\"t2.large\\", \\"t2.xlarge\\", \\"t2.2xlarge\\", \\"t3.nano\\", \\"t3.micro\\", \\"t3.small\\",
    \\"t3.medium\\", \\"t3.large\\", \\"t3.xlarge\\", \\"t3.2xlarge\\", \\"t3a.nano\\", \\"t3a.micro\\",
            \\"t3a.small\\", \\"t3a.medium\\", \\"t3a.large\\", \\"t3a.xlarge\\", \\"t3a.2xlarge\\",
  \\"t4g.nano\\", \\"t4g.micro\\", \\"t4g.small\\", \\"t4g.medium\\", \\"t4g.large\\", \\"t4g.xlarge\\",
   \\"t4g.2xlarge\\", \\"m1.small\\", \\"m1.medium\\", \\"m1.large\\", \\"m1.xlarge\\", \\"m2.xlarge\\",
               \\"m2.2xlarge\\", \\"m2.4xlarge\\", \\"m3.medium\\", \\"m3.large\\", \\"m3.xlarge\\",
              \\"m3.2xlarge\\", \\"m4.large\\", \\"m4.xlarge\\", \\"m4.2xlarge\\", \\"m4.4xlarge\\",
            \\"m4.10xlarge\\", \\"m4.16xlarge\\", \\"m5.large\\", \\"m5.xlarge\\", \\"m5.2xlarge\\",
        \\"m5.4xlarge\\", \\"m5.8xlarge\\", \\"m5.12xlarge\\", \\"m5.16xlarge\\", \\"m5.24xlarge\\",
            \\"m5.metal\\", \\"m5a.large\\", \\"m5a.xlarge\\", \\"m5a.2xlarge\\", \\"m5a.4xlarge\\",
    \\"m5a.8xlarge\\", \\"m5a.12xlarge\\", \\"m5a.16xlarge\\", \\"m5a.24xlarge\\", \\"m5ad.large\\",
                  \\"m5ad.xlarge\\", \\"m5ad.2xlarge\\", \\"m5ad.4xlarge\\", \\"m5ad.8xlarge\\",
   \\"m5ad.12xlarge\\", \\"m5ad.16xlarge\\", \\"m5ad.24xlarge\\", \\"m5d.large\\", \\"m5d.xlarge\\",
    \\"m5d.2xlarge\\", \\"m5d.4xlarge\\", \\"m5d.8xlarge\\", \\"m5d.12xlarge\\", \\"m5d.16xlarge\\",
       \\"m5d.24xlarge\\", \\"m5d.metal\\", \\"m5dn.large\\", \\"m5dn.xlarge\\", \\"m5dn.2xlarge\\",
               \\"m5dn.4xlarge\\", \\"m5dn.8xlarge\\", \\"m5dn.12xlarge\\", \\"m5dn.16xlarge\\",
       \\"m5dn.24xlarge\\", \\"m5n.large\\", \\"m5n.xlarge\\", \\"m5n.2xlarge\\", \\"m5n.4xlarge\\",
    \\"m5n.8xlarge\\", \\"m5n.12xlarge\\", \\"m5n.16xlarge\\", \\"m5n.24xlarge\\", \\"m6g.medium\\",
         \\"m6g.large\\", \\"m6g.xlarge\\", \\"m6g.2xlarge\\", \\"m6g.4xlarge\\", \\"m6g.8xlarge\\",
       \\"m6g.12xlarge\\", \\"m6g.16xlarge\\", \\"m6g.metal\\", \\"m6gd.medium\\", \\"m6gd.large\\",
                  \\"m6gd.xlarge\\", \\"m6gd.2xlarge\\", \\"m6gd.4xlarge\\", \\"m6gd.8xlarge\\",
       \\"m6gd.12xlarge\\", \\"m6gd.16xlarge\\", \\"m6gd.metal\\", \\"c1.medium\\", \\"c1.xlarge\\",
  \\"c3.large\\", \\"c3.xlarge\\", \\"c3.2xlarge\\", \\"c3.4xlarge\\", \\"c3.8xlarge\\", \\"c4.large\\",
              \\"c4.xlarge\\", \\"c4.2xlarge\\", \\"c4.4xlarge\\", \\"c4.8xlarge\\", \\"c5.large\\",
           \\"c5.xlarge\\", \\"c5.2xlarge\\", \\"c5.4xlarge\\", \\"c5.9xlarge\\", \\"c5.12xlarge\\",
            \\"c5.18xlarge\\", \\"c5.24xlarge\\", \\"c5.metal\\", \\"c5a.large\\", \\"c5a.xlarge\\",
    \\"c5a.2xlarge\\", \\"c5a.4xlarge\\", \\"c5a.8xlarge\\", \\"c5a.12xlarge\\", \\"c5a.16xlarge\\",
    \\"c5a.24xlarge\\", \\"c5ad.large\\", \\"c5ad.xlarge\\", \\"c5ad.2xlarge\\", \\"c5ad.4xlarge\\",
              \\"c5ad.8xlarge\\", \\"c5ad.12xlarge\\", \\"c5ad.16xlarge\\", \\"c5ad.24xlarge\\",
         \\"c5d.large\\", \\"c5d.xlarge\\", \\"c5d.2xlarge\\", \\"c5d.4xlarge\\", \\"c5d.9xlarge\\",
       \\"c5d.12xlarge\\", \\"c5d.18xlarge\\", \\"c5d.24xlarge\\", \\"c5d.metal\\", \\"c5n.large\\",
      \\"c5n.xlarge\\", \\"c5n.2xlarge\\", \\"c5n.4xlarge\\", \\"c5n.9xlarge\\", \\"c5n.18xlarge\\",
            \\"c5n.metal\\", \\"c6g.medium\\", \\"c6g.large\\", \\"c6g.xlarge\\", \\"c6g.2xlarge\\",
      \\"c6g.4xlarge\\", \\"c6g.8xlarge\\", \\"c6g.12xlarge\\", \\"c6g.16xlarge\\", \\"c6g.metal\\",
     \\"c6gd.medium\\", \\"c6gd.large\\", \\"c6gd.xlarge\\", \\"c6gd.2xlarge\\", \\"c6gd.4xlarge\\",
     \\"c6gd.8xlarge\\", \\"c6gd.12xlarge\\", \\"c6gd.16xlarge\\", \\"c6gd.metal\\", \\"r3.large\\",
              \\"r3.xlarge\\", \\"r3.2xlarge\\", \\"r3.4xlarge\\", \\"r3.8xlarge\\", \\"r4.large\\",
           \\"r4.xlarge\\", \\"r4.2xlarge\\", \\"r4.4xlarge\\", \\"r4.8xlarge\\", \\"r4.16xlarge\\",
              \\"r5.large\\", \\"r5.xlarge\\", \\"r5.2xlarge\\", \\"r5.4xlarge\\", \\"r5.8xlarge\\",
           \\"r5.12xlarge\\", \\"r5.16xlarge\\", \\"r5.24xlarge\\", \\"r5.metal\\", \\"r5a.large\\",
      \\"r5a.xlarge\\", \\"r5a.2xlarge\\", \\"r5a.4xlarge\\", \\"r5a.8xlarge\\", \\"r5a.12xlarge\\",
    \\"r5a.16xlarge\\", \\"r5a.24xlarge\\", \\"r5ad.large\\", \\"r5ad.xlarge\\", \\"r5ad.2xlarge\\",
               \\"r5ad.4xlarge\\", \\"r5ad.8xlarge\\", \\"r5ad.12xlarge\\", \\"r5ad.16xlarge\\",
       \\"r5ad.24xlarge\\", \\"r5d.large\\", \\"r5d.xlarge\\", \\"r5d.2xlarge\\", \\"r5d.4xlarge\\",
     \\"r5d.8xlarge\\", \\"r5d.12xlarge\\", \\"r5d.16xlarge\\", \\"r5d.24xlarge\\", \\"r5d.metal\\",
    \\"r5dn.large\\", \\"r5dn.xlarge\\", \\"r5dn.2xlarge\\", \\"r5dn.4xlarge\\", \\"r5dn.8xlarge\\",
   \\"r5dn.12xlarge\\", \\"r5dn.16xlarge\\", \\"r5dn.24xlarge\\", \\"r5n.large\\", \\"r5n.xlarge\\",
    \\"r5n.2xlarge\\", \\"r5n.4xlarge\\", \\"r5n.8xlarge\\", \\"r5n.12xlarge\\", \\"r5n.16xlarge\\",
         \\"r5n.24xlarge\\", \\"r6g.medium\\", \\"r6g.large\\", \\"r6g.xlarge\\", \\"r6g.2xlarge\\",
      \\"r6g.4xlarge\\", \\"r6g.8xlarge\\", \\"r6g.12xlarge\\", \\"r6g.16xlarge\\", \\"r6g.metal\\",
     \\"r6gd.medium\\", \\"r6gd.large\\", \\"r6gd.xlarge\\", \\"r6gd.2xlarge\\", \\"r6gd.4xlarge\\",
  \\"r6gd.8xlarge\\", \\"r6gd.12xlarge\\", \\"r6gd.16xlarge\\", \\"r6gd.metal\\", \\"x1.16xlarge\\",
       \\"x1.32xlarge\\", \\"x1e.xlarge\\", \\"x1e.2xlarge\\", \\"x1e.4xlarge\\", \\"x1e.8xlarge\\",
       \\"x1e.16xlarge\\", \\"x1e.32xlarge\\", \\"z1d.large\\", \\"z1d.xlarge\\", \\"z1d.2xlarge\\",
         \\"z1d.3xlarge\\", \\"z1d.6xlarge\\", \\"z1d.12xlarge\\", \\"z1d.metal\\", \\"d2.xlarge\\",
           \\"d2.2xlarge\\", \\"d2.4xlarge\\", \\"d2.8xlarge\\", \\"h1.2xlarge\\", \\"h1.4xlarge\\",
           \\"h1.8xlarge\\", \\"h1.16xlarge\\", \\"i2.xlarge\\", \\"i2.2xlarge\\", \\"i2.4xlarge\\",
              \\"i2.8xlarge\\", \\"i3.large\\", \\"i3.xlarge\\", \\"i3.2xlarge\\", \\"i3.4xlarge\\",
           \\"i3.8xlarge\\", \\"i3.16xlarge\\", \\"i3.metal\\", \\"i3en.large\\", \\"i3en.xlarge\\",
                \\"i3en.2xlarge\\", \\"i3en.3xlarge\\", \\"i3en.6xlarge\\", \\"i3en.12xlarge\\",
   \\"i3en.24xlarge\\", \\"i3en.metal\\", \\"inf1.xlarge\\", \\"inf1.2xlarge\\", \\"inf1.6xlarge\\",
       \\"inf1.24xlarge\\", \\"f1.2xlarge\\", \\"f1.4xlarge\\", \\"f1.16xlarge\\", \\"g2.2xlarge\\",
          \\"g2.8xlarge\\", \\"g3.4xlarge\\", \\"g3.8xlarge\\", \\"g3.16xlarge\\", \\"g3s.xlarge\\",
                  \\"g4dn.xlarge\\", \\"g4dn.2xlarge\\", \\"g4dn.4xlarge\\", \\"g4dn.8xlarge\\",
      \\"g4dn.12xlarge\\", \\"g4dn.16xlarge\\", \\"g4dn.metal\\", \\"p2.xlarge\\", \\"p2.8xlarge\\",
      \\"p2.16xlarge\\", \\"p3.2xlarge\\", \\"p3.8xlarge\\", \\"p3.16xlarge\\", \\"p3dn.24xlarge\\",
                                                                 \\"p4d.24xlarge\\"]
      --family              EC2 instance family.
                    [array] [choices: \\"general\\", \\"compute\\", \\"memory\\", \\"storage\\",
                                                         \\"acceleratedComputing\\"]
  -f, --familyType          EC2 instance family types.
       [array] [choices: \\"a1\\", \\"t1\\", \\"t2\\", \\"t3\\", \\"t3a\\", \\"t4g\\", \\"m1\\", \\"m2\\", \\"m3\\",
     \\"m4\\", \\"m5\\", \\"m5a\\", \\"m5ad\\", \\"m5d\\", \\"m5dn\\", \\"m5n\\", \\"m6g\\", \\"m6gd\\", \\"c1\\", \\"c3\\",
       \\"c4\\", \\"c5\\", \\"c5a\\", \\"c5ad\\", \\"c5d\\", \\"c5n\\", \\"c6g\\", \\"c6gd\\", \\"r3\\", \\"r4\\", \\"r5\\",
   \\"r5a\\", \\"r5ad\\", \\"r5d\\", \\"r5dn\\", \\"r5n\\", \\"r6g\\", \\"r6gd\\", \\"x1\\", \\"x1e\\", \\"z1d\\", \\"d2\\",
  \\"h1\\", \\"i2\\", \\"i3\\", \\"i3en\\", \\"inf1\\", \\"f1\\", \\"g2\\", \\"g3\\", \\"g3s\\", \\"g4dn\\", \\"p2\\", \\"p3\\",
                                                                  \\"p3dn\\", \\"p4d\\"]
  -s, --size                EC2 instance sizes.
        [array] [choices: \\"nano\\", \\"micro\\", \\"small\\", \\"medium\\", \\"large\\", \\"xlarge\\",
   \\"2xlarge\\", \\"3xlarge\\", \\"4xlarge\\", \\"6xlarge\\", \\"8xlarge\\", \\"9xlarge\\", \\"10xlarge\\",
            \\"12xlarge\\", \\"16xlarge\\", \\"18xlarge\\", \\"24xlarge\\", \\"32xlarge\\", \\"metal\\"]
      --minVCPU, --mc       Minimum VCPU count                          [number]
      --minMemoryGB, --mm   Minimum memory (GB)                         [number]
  -p, --priceMax            Maximum price                               [number]
  -d, --productDescription  Product descriptions. Choose \`windows\` or \`linux\`
                            (all lowercase) as wildcard.
  [array] [choices: \\"Linux/UNIX\\", \\"Linux/UNIX (Amazon VPC)\\", \\"SUSE Linux\\", \\"SUSE
      Linux (Amazon VPC)\\", \\"Red Hat Enterprise Linux\\", \\"Red Hat Enterprise Linux
           (Amazon VPC)\\", \\"Windows\\", \\"Windows (Amazon VPC)\\", \\"linux\\", \\"windows\\"]
  -l, --limit               Limit results output length   [number] [default: 20]
  -j, --json                Outputs in JSON format    [boolean] [default: false]
      --accessKeyId         AWS Access Key ID.                          [string]
      --secretAccessKey     AWS Secret Access Key.                      [string]"
`;

exports[`cli test by import should return expected values with default options 1`] = `
"╔══════════╤══════════╤═══════╤══════╤═════════════════════════╤═══════════════╤═══════════════════════╗
║ t3a.nano │ 0.001500 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-west-2a    │ US West (Oregon)      ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3a.nano │ 0.001500 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-west-2c    │ US West (Oregon)      ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3a.nano │ 0.001500 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-west-2d    │ US West (Oregon)      ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ eu-north-1a   │ Europe (Stockholm)    ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ eu-north-1b   │ Europe (Stockholm)    ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ eu-north-1c   │ Europe (Stockholm)    ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1a    │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1b    │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1c    │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1d    │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1f    │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-east-2a    │ US East (Ohio)        ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-east-2b    │ US East (Ohio)        ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-east-2c    │ US East (Ohio)        ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-west-2a    │ US West (Oregon)      ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-west-2b    │ US West (Oregon)      ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-west-2c    │ US West (Oregon)      ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ us-west-2d    │ US West (Oregon)      ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3a.nano │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ ca-central-1a │ Canada (Central)      ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼───────────────┼───────────────────────╢
║ t3a.nano │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX              │ ca-central-1b │ Canada (Central)      ║
╚══════════╧══════════╧═══════╧══════╧═════════════════════════╧═══════════════╧═══════════════════════╝
"
`;

exports[`cli test by import should return expected values with instance family types and sizes 1`] = `
"╔══════════╤══════════╤═══════╤══════╤═════════════════════════╤═════════════════╤══════════════════════════╗
║ c5.large │ 0.019000 │ 2vCPU │ 4GiB │ Linux/UNIX              │ us-east-2a      │ US East (Ohio)           ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.019000 │ 2vCPU │ 4GiB │ Linux/UNIX              │ us-east-2b      │ US East (Ohio)           ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.019000 │ 2vCPU │ 4GiB │ Linux/UNIX              │ us-east-2c      │ US East (Ohio)           ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.027300 │ 2vCPU │ 4GiB │ Linux/UNIX              │ eu-north-1a     │ Europe (Stockholm)       ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.027300 │ 2vCPU │ 4GiB │ Linux/UNIX              │ eu-north-1b     │ Europe (Stockholm)       ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.027300 │ 2vCPU │ 4GiB │ Linux/UNIX              │ eu-north-1c     │ Europe (Stockholm)       ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.028900 │ 2vCPU │ 4GiB │ Linux/UNIX              │ ca-central-1a   │ Canada (Central)         ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.029300 │ 2vCPU │ 4GiB │ Linux/UNIX              │ ca-central-1b   │ Canada (Central)         ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.030000 │ 2vCPU │ 4GiB │ Linux/UNIX              │ ap-northeast-2a │ Asia Pacific (Seoul)     ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.030000 │ 2vCPU │ 4GiB │ Linux/UNIX              │ ap-northeast-2b │ Asia Pacific (Seoul)     ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.030000 │ 2vCPU │ 4GiB │ Linux/UNIX              │ ap-northeast-2c │ Asia Pacific (Seoul)     ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.030300 │ 2vCPU │ 4GiB │ Linux/UNIX              │ eu-west-3c      │ Europe (Paris)           ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.030400 │ 2vCPU │ 4GiB │ Linux/UNIX              │ eu-west-3b      │ Europe (Paris)           ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.030800 │ 2vCPU │ 4GiB │ Linux/UNIX              │ us-west-1b      │ US West (N. California)  ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.031300 │ 2vCPU │ 4GiB │ Linux/UNIX              │ us-west-1c      │ US West (N. California)  ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.031400 │ 2vCPU │ 4GiB │ Linux/UNIX              │ eu-west-2a      │ Europe (London)          ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.032100 │ 2vCPU │ 4GiB │ Linux/UNIX (Amazon VPC) │ ap-southeast-1c │ Asia Pacific (Singapore) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.032200 │ 2vCPU │ 4GiB │ Linux/UNIX              │ eu-west-2b      │ Europe (London)          ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.032600 │ 2vCPU │ 4GiB │ Linux/UNIX              │ us-west-2d      │ US West (Oregon)         ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼─────────────────┼──────────────────────────╢
║ c5.large │ 0.032800 │ 2vCPU │ 4GiB │ Linux/UNIX (Amazon VPC) │ us-east-1f      │ US East (N. Virginia)    ║
╚══════════╧══════════╧═══════╧══════╧═════════════════════════╧═════════════════╧══════════════════════════╝
"
`;

exports[`cli test by import should return expected values with user options 1`] = `
"╔══════════╤══════════╤═══════╤══════╤═════════════════════════╤════════════╤═══════════════════════╗
║ c5.large │ 0.032800 │ 2vCPU │ 4GiB │ Linux/UNIX (Amazon VPC) │ us-east-1f │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ c5.large │ 0.037600 │ 2vCPU │ 4GiB │ Linux/UNIX (Amazon VPC) │ us-east-1c │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ c5.large │ 0.038300 │ 2vCPU │ 4GiB │ Linux/UNIX (Amazon VPC) │ us-east-1a │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ c5.large │ 0.038400 │ 2vCPU │ 4GiB │ Linux/UNIX (Amazon VPC) │ us-east-1d │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ c5.large │ 0.041000 │ 2vCPU │ 4GiB │ Linux/UNIX (Amazon VPC) │ us-east-1b │ US East (N. Virginia) ║
╚══════════╧══════════╧═══════╧══════╧═════════════════════════╧════════════╧═══════════════════════╝
"
`;

exports[`cli test by import should return expected values with wildcard product descriptions 1`] = `
"╔══════════╤══════════╤═══════╤══════╤═════════════════════════╤════════════╤═══════════════════════╗
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1a │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1b │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1c │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1d │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3.nano  │ 0.001600 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1f │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3a.nano │ 0.001700 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1a │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3a.nano │ 0.001700 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1c │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3a.nano │ 0.001800 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1b │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3a.nano │ 0.001800 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1d │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼─────────────────────────┼────────────┼───────────────────────╢
║ t3a.nano │ 0.001800 │ 2vCPU │ 1GiB │ Linux/UNIX (Amazon VPC) │ us-east-1f │ US East (N. Virginia) ║
╚══════════╧══════════╧═══════╧══════╧═════════════════════════╧════════════╧═══════════════════════╝

╔══════════╤══════════╤═══════╤══════╤══════════════════════╤════════════╤═══════════════════════╗
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows              │ us-east-1a │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows (Amazon VPC) │ us-east-1a │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows              │ us-east-1b │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows (Amazon VPC) │ us-east-1b │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows              │ us-east-1c │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows (Amazon VPC) │ us-east-1c │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows              │ us-east-1d │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows (Amazon VPC) │ us-east-1d │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t1.micro │ 0.002000 │ 1vCPU │ 1GiB │ Windows (Amazon VPC) │ us-east-1f │ US East (N. Virginia) ║
╟──────────┼──────────┼───────┼──────┼──────────────────────┼────────────┼───────────────────────╢
║ t3a.nano │ 0.006000 │ 2vCPU │ 1GiB │ Windows (Amazon VPC) │ us-east-1a │ US East (N. Virginia) ║
╚══════════╧══════════╧═══════╧══════╧══════════════════════╧════════════╧═══════════════════════╝
"
`;

exports[`cli test by import ui mode should return expected result 1`] = `
"╔══════════╤══════════╤═══════╤═══════╤════════════╤════════════╤═════════════════════════╗
║ c4.large │ 0.018100 │ 2vCPU │ 4GiB  │ Linux/UNIX │ us-east-2a │ US East (Ohio)          ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ c4.large │ 0.018100 │ 2vCPU │ 4GiB  │ Linux/UNIX │ us-east-2c │ US East (Ohio)          ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ c4.large │ 0.019500 │ 2vCPU │ 4GiB  │ Linux/UNIX │ us-east-2b │ US East (Ohio)          ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ r5.large │ 0.020900 │ 2vCPU │ 16GiB │ Linux/UNIX │ us-east-2a │ US East (Ohio)          ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ r5.large │ 0.021100 │ 2vCPU │ 16GiB │ Linux/UNIX │ us-east-2c │ US East (Ohio)          ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ r5.large │ 0.021200 │ 2vCPU │ 16GiB │ Linux/UNIX │ us-east-2b │ US East (Ohio)          ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ c4.large │ 0.029300 │ 2vCPU │ 4GiB  │ Linux/UNIX │ us-west-1b │ US West (N. California) ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ c4.large │ 0.029300 │ 2vCPU │ 4GiB  │ Linux/UNIX │ us-west-1c │ US West (N. California) ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ c4.large │ 0.031300 │ 2vCPU │ 4GiB  │ Linux/UNIX │ us-west-2c │ US West (Oregon)        ║
╟──────────┼──────────┼───────┼───────┼────────────┼────────────┼─────────────────────────╢
║ c4.large │ 0.031500 │ 2vCPU │ 4GiB  │ Linux/UNIX │ us-west-2a │ US West (Oregon)        ║
╚══════════╧══════════╧═══════╧═══════╧════════════╧════════════╧═════════════════════════╝
"
`;

exports[`cli test by spawnSync should stdout help screen 1`] = `
"aws-spot-price

get current AWS spot instance prices

Options:
      --version             Show version number                        [boolean]
      --help                Show help                                  [boolean]
      --ui                  Start with UI mode        [boolean] [default: false]
  -r, --region              AWS regions.
           [array] [choices: \\"us-east-1\\", \\"us-east-2\\", \\"us-west-1\\", \\"us-west-2\\",
    \\"af-south-1\\", \\"ap-east-1\\", \\"ap-northeast-1\\", \\"ap-northeast-2\\", \\"ap-south-1\\",
             \\"ap-southeast-1\\", \\"ap-southeast-2\\", \\"ca-central-1\\", \\"eu-central-1\\",
              \\"eu-north-1\\", \\"eu-south-1\\", \\"eu-west-1\\", \\"eu-west-2\\", \\"eu-west-3\\",
                                                      \\"me-south-1\\", \\"sa-east-1\\"]
  -i, --instanceType        EC2 type
           [array] [choices: \\"a1.medium\\", \\"a1.large\\", \\"a1.xlarge\\", \\"a1.2xlarge\\",
      \\"a1.4xlarge\\", \\"a1.metal\\", \\"t1.micro\\", \\"t2.micro\\", \\"t2.small\\", \\"t2.medium\\",
       \\"t2.large\\", \\"t2.xlarge\\", \\"t2.2xlarge\\", \\"t3.nano\\", \\"t3.micro\\", \\"t3.small\\",
    \\"t3.medium\\", \\"t3.large\\", \\"t3.xlarge\\", \\"t3.2xlarge\\", \\"t3a.nano\\", \\"t3a.micro\\",
            \\"t3a.small\\", \\"t3a.medium\\", \\"t3a.large\\", \\"t3a.xlarge\\", \\"t3a.2xlarge\\",
  \\"t4g.nano\\", \\"t4g.micro\\", \\"t4g.small\\", \\"t4g.medium\\", \\"t4g.large\\", \\"t4g.xlarge\\",
   \\"t4g.2xlarge\\", \\"m1.small\\", \\"m1.medium\\", \\"m1.large\\", \\"m1.xlarge\\", \\"m2.xlarge\\",
               \\"m2.2xlarge\\", \\"m2.4xlarge\\", \\"m3.medium\\", \\"m3.large\\", \\"m3.xlarge\\",
              \\"m3.2xlarge\\", \\"m4.large\\", \\"m4.xlarge\\", \\"m4.2xlarge\\", \\"m4.4xlarge\\",
            \\"m4.10xlarge\\", \\"m4.16xlarge\\", \\"m5.large\\", \\"m5.xlarge\\", \\"m5.2xlarge\\",
        \\"m5.4xlarge\\", \\"m5.8xlarge\\", \\"m5.12xlarge\\", \\"m5.16xlarge\\", \\"m5.24xlarge\\",
            \\"m5.metal\\", \\"m5a.large\\", \\"m5a.xlarge\\", \\"m5a.2xlarge\\", \\"m5a.4xlarge\\",
    \\"m5a.8xlarge\\", \\"m5a.12xlarge\\", \\"m5a.16xlarge\\", \\"m5a.24xlarge\\", \\"m5ad.large\\",
                  \\"m5ad.xlarge\\", \\"m5ad.2xlarge\\", \\"m5ad.4xlarge\\", \\"m5ad.8xlarge\\",
   \\"m5ad.12xlarge\\", \\"m5ad.16xlarge\\", \\"m5ad.24xlarge\\", \\"m5d.large\\", \\"m5d.xlarge\\",
    \\"m5d.2xlarge\\", \\"m5d.4xlarge\\", \\"m5d.8xlarge\\", \\"m5d.12xlarge\\", \\"m5d.16xlarge\\",
       \\"m5d.24xlarge\\", \\"m5d.metal\\", \\"m5dn.large\\", \\"m5dn.xlarge\\", \\"m5dn.2xlarge\\",
               \\"m5dn.4xlarge\\", \\"m5dn.8xlarge\\", \\"m5dn.12xlarge\\", \\"m5dn.16xlarge\\",
       \\"m5dn.24xlarge\\", \\"m5n.large\\", \\"m5n.xlarge\\", \\"m5n.2xlarge\\", \\"m5n.4xlarge\\",
    \\"m5n.8xlarge\\", \\"m5n.12xlarge\\", \\"m5n.16xlarge\\", \\"m5n.24xlarge\\", \\"m6g.medium\\",
         \\"m6g.large\\", \\"m6g.xlarge\\", \\"m6g.2xlarge\\", \\"m6g.4xlarge\\", \\"m6g.8xlarge\\",
       \\"m6g.12xlarge\\", \\"m6g.16xlarge\\", \\"m6g.metal\\", \\"m6gd.medium\\", \\"m6gd.large\\",
                  \\"m6gd.xlarge\\", \\"m6gd.2xlarge\\", \\"m6gd.4xlarge\\", \\"m6gd.8xlarge\\",
       \\"m6gd.12xlarge\\", \\"m6gd.16xlarge\\", \\"m6gd.metal\\", \\"c1.medium\\", \\"c1.xlarge\\",
  \\"c3.large\\", \\"c3.xlarge\\", \\"c3.2xlarge\\", \\"c3.4xlarge\\", \\"c3.8xlarge\\", \\"c4.large\\",
              \\"c4.xlarge\\", \\"c4.2xlarge\\", \\"c4.4xlarge\\", \\"c4.8xlarge\\", \\"c5.large\\",
           \\"c5.xlarge\\", \\"c5.2xlarge\\", \\"c5.4xlarge\\", \\"c5.9xlarge\\", \\"c5.12xlarge\\",
            \\"c5.18xlarge\\", \\"c5.24xlarge\\", \\"c5.metal\\", \\"c5a.large\\", \\"c5a.xlarge\\",
    \\"c5a.2xlarge\\", \\"c5a.4xlarge\\", \\"c5a.8xlarge\\", \\"c5a.12xlarge\\", \\"c5a.16xlarge\\",
    \\"c5a.24xlarge\\", \\"c5ad.large\\", \\"c5ad.xlarge\\", \\"c5ad.2xlarge\\", \\"c5ad.4xlarge\\",
              \\"c5ad.8xlarge\\", \\"c5ad.12xlarge\\", \\"c5ad.16xlarge\\", \\"c5ad.24xlarge\\",
         \\"c5d.large\\", \\"c5d.xlarge\\", \\"c5d.2xlarge\\", \\"c5d.4xlarge\\", \\"c5d.9xlarge\\",
       \\"c5d.12xlarge\\", \\"c5d.18xlarge\\", \\"c5d.24xlarge\\", \\"c5d.metal\\", \\"c5n.large\\",
      \\"c5n.xlarge\\", \\"c5n.2xlarge\\", \\"c5n.4xlarge\\", \\"c5n.9xlarge\\", \\"c5n.18xlarge\\",
            \\"c5n.metal\\", \\"c6g.medium\\", \\"c6g.large\\", \\"c6g.xlarge\\", \\"c6g.2xlarge\\",
      \\"c6g.4xlarge\\", \\"c6g.8xlarge\\", \\"c6g.12xlarge\\", \\"c6g.16xlarge\\", \\"c6g.metal\\",
     \\"c6gd.medium\\", \\"c6gd.large\\", \\"c6gd.xlarge\\", \\"c6gd.2xlarge\\", \\"c6gd.4xlarge\\",
     \\"c6gd.8xlarge\\", \\"c6gd.12xlarge\\", \\"c6gd.16xlarge\\", \\"c6gd.metal\\", \\"r3.large\\",
              \\"r3.xlarge\\", \\"r3.2xlarge\\", \\"r3.4xlarge\\", \\"r3.8xlarge\\", \\"r4.large\\",
           \\"r4.xlarge\\", \\"r4.2xlarge\\", \\"r4.4xlarge\\", \\"r4.8xlarge\\", \\"r4.16xlarge\\",
              \\"r5.large\\", \\"r5.xlarge\\", \\"r5.2xlarge\\", \\"r5.4xlarge\\", \\"r5.8xlarge\\",
           \\"r5.12xlarge\\", \\"r5.16xlarge\\", \\"r5.24xlarge\\", \\"r5.metal\\", \\"r5a.large\\",
      \\"r5a.xlarge\\", \\"r5a.2xlarge\\", \\"r5a.4xlarge\\", \\"r5a.8xlarge\\", \\"r5a.12xlarge\\",
    \\"r5a.16xlarge\\", \\"r5a.24xlarge\\", \\"r5ad.large\\", \\"r5ad.xlarge\\", \\"r5ad.2xlarge\\",
               \\"r5ad.4xlarge\\", \\"r5ad.8xlarge\\", \\"r5ad.12xlarge\\", \\"r5ad.16xlarge\\",
       \\"r5ad.24xlarge\\", \\"r5d.large\\", \\"r5d.xlarge\\", \\"r5d.2xlarge\\", \\"r5d.4xlarge\\",
     \\"r5d.8xlarge\\", \\"r5d.12xlarge\\", \\"r5d.16xlarge\\", \\"r5d.24xlarge\\", \\"r5d.metal\\",
    \\"r5dn.large\\", \\"r5dn.xlarge\\", \\"r5dn.2xlarge\\", \\"r5dn.4xlarge\\", \\"r5dn.8xlarge\\",
   \\"r5dn.12xlarge\\", \\"r5dn.16xlarge\\", \\"r5dn.24xlarge\\", \\"r5n.large\\", \\"r5n.xlarge\\",
    \\"r5n.2xlarge\\", \\"r5n.4xlarge\\", \\"r5n.8xlarge\\", \\"r5n.12xlarge\\", \\"r5n.16xlarge\\",
         \\"r5n.24xlarge\\", \\"r6g.medium\\", \\"r6g.large\\", \\"r6g.xlarge\\", \\"r6g.2xlarge\\",
      \\"r6g.4xlarge\\", \\"r6g.8xlarge\\", \\"r6g.12xlarge\\", \\"r6g.16xlarge\\", \\"r6g.metal\\",
     \\"r6gd.medium\\", \\"r6gd.large\\", \\"r6gd.xlarge\\", \\"r6gd.2xlarge\\", \\"r6gd.4xlarge\\",
  \\"r6gd.8xlarge\\", \\"r6gd.12xlarge\\", \\"r6gd.16xlarge\\", \\"r6gd.metal\\", \\"x1.16xlarge\\",
       \\"x1.32xlarge\\", \\"x1e.xlarge\\", \\"x1e.2xlarge\\", \\"x1e.4xlarge\\", \\"x1e.8xlarge\\",
       \\"x1e.16xlarge\\", \\"x1e.32xlarge\\", \\"z1d.large\\", \\"z1d.xlarge\\", \\"z1d.2xlarge\\",
         \\"z1d.3xlarge\\", \\"z1d.6xlarge\\", \\"z1d.12xlarge\\", \\"z1d.metal\\", \\"d2.xlarge\\",
           \\"d2.2xlarge\\", \\"d2.4xlarge\\", \\"d2.8xlarge\\", \\"h1.2xlarge\\", \\"h1.4xlarge\\",
           \\"h1.8xlarge\\", \\"h1.16xlarge\\", \\"i2.xlarge\\", \\"i2.2xlarge\\", \\"i2.4xlarge\\",
              \\"i2.8xlarge\\", \\"i3.large\\", \\"i3.xlarge\\", \\"i3.2xlarge\\", \\"i3.4xlarge\\",
           \\"i3.8xlarge\\", \\"i3.16xlarge\\", \\"i3.metal\\", \\"i3en.large\\", \\"i3en.xlarge\\",
                \\"i3en.2xlarge\\", \\"i3en.3xlarge\\", \\"i3en.6xlarge\\", \\"i3en.12xlarge\\",
   \\"i3en.24xlarge\\", \\"i3en.metal\\", \\"inf1.xlarge\\", \\"inf1.2xlarge\\", \\"inf1.6xlarge\\",
       \\"inf1.24xlarge\\", \\"f1.2xlarge\\", \\"f1.4xlarge\\", \\"f1.16xlarge\\", \\"g2.2xlarge\\",
          \\"g2.8xlarge\\", \\"g3.4xlarge\\", \\"g3.8xlarge\\", \\"g3.16xlarge\\", \\"g3s.xlarge\\",
                  \\"g4dn.xlarge\\", \\"g4dn.2xlarge\\", \\"g4dn.4xlarge\\", \\"g4dn.8xlarge\\",
      \\"g4dn.12xlarge\\", \\"g4dn.16xlarge\\", \\"g4dn.metal\\", \\"p2.xlarge\\", \\"p2.8xlarge\\",
      \\"p2.16xlarge\\", \\"p3.2xlarge\\", \\"p3.8xlarge\\", \\"p3.16xlarge\\", \\"p3dn.24xlarge\\",
                                                                 \\"p4d.24xlarge\\"]
      --family              EC2 instance family.
                    [array] [choices: \\"general\\", \\"compute\\", \\"memory\\", \\"storage\\",
                                                         \\"acceleratedComputing\\"]
  -f, --familyType          EC2 instance family types.
       [array] [choices: \\"a1\\", \\"t1\\", \\"t2\\", \\"t3\\", \\"t3a\\", \\"t4g\\", \\"m1\\", \\"m2\\", \\"m3\\",
     \\"m4\\", \\"m5\\", \\"m5a\\", \\"m5ad\\", \\"m5d\\", \\"m5dn\\", \\"m5n\\", \\"m6g\\", \\"m6gd\\", \\"c1\\", \\"c3\\",
       \\"c4\\", \\"c5\\", \\"c5a\\", \\"c5ad\\", \\"c5d\\", \\"c5n\\", \\"c6g\\", \\"c6gd\\", \\"r3\\", \\"r4\\", \\"r5\\",
   \\"r5a\\", \\"r5ad\\", \\"r5d\\", \\"r5dn\\", \\"r5n\\", \\"r6g\\", \\"r6gd\\", \\"x1\\", \\"x1e\\", \\"z1d\\", \\"d2\\",
  \\"h1\\", \\"i2\\", \\"i3\\", \\"i3en\\", \\"inf1\\", \\"f1\\", \\"g2\\", \\"g3\\", \\"g3s\\", \\"g4dn\\", \\"p2\\", \\"p3\\",
                                                                  \\"p3dn\\", \\"p4d\\"]
  -s, --size                EC2 instance sizes.
        [array] [choices: \\"nano\\", \\"micro\\", \\"small\\", \\"medium\\", \\"large\\", \\"xlarge\\",
   \\"2xlarge\\", \\"3xlarge\\", \\"4xlarge\\", \\"6xlarge\\", \\"8xlarge\\", \\"9xlarge\\", \\"10xlarge\\",
            \\"12xlarge\\", \\"16xlarge\\", \\"18xlarge\\", \\"24xlarge\\", \\"32xlarge\\", \\"metal\\"]
      --minVCPU, --mc       Minimum VCPU count                          [number]
      --minMemoryGB, --mm   Minimum memory (GB)                         [number]
  -p, --priceMax            Maximum price                               [number]
  -d, --productDescription  Product descriptions. Choose \`windows\` or \`linux\`
                            (all lowercase) as wildcard.
  [array] [choices: \\"Linux/UNIX\\", \\"Linux/UNIX (Amazon VPC)\\", \\"SUSE Linux\\", \\"SUSE
      Linux (Amazon VPC)\\", \\"Red Hat Enterprise Linux\\", \\"Red Hat Enterprise Linux
           (Amazon VPC)\\", \\"Windows\\", \\"Windows (Amazon VPC)\\", \\"linux\\", \\"windows\\"]
  -l, --limit               Limit results output length   [number] [default: 20]
  -j, --json                Outputs in JSON format    [boolean] [default: false]
      --accessKeyId         AWS Access Key ID.                          [string]
      --secretAccessKey     AWS Secret Access Key.                      [string]
"
`;
